2005-09-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JPanel.java
	(accessibleContext): Removed this unnecessary field. Use the
	inherited field of the same name from JComponent instead.

2005-09-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/UIManager.java
	(static_initializer): Load MetalLookAndFeel only as fallback, if
	the system property 'swing.defaultlaf' is not defined. Before
	it has accidentally loaded the MetalLookAndFeel in all cases,
	regardless of the property setting.

2005-09-22  Roman Kennke  <kennke@aicas.com>

	* javax/swing/JComponent.java
	(paintChildren): If a child component is invisible, skip it.
	Handle the (rare) case when no clip is set as if it's set to the
	child component's bounds. These fixes should make Swing working
	again as before.

2005-09-22  Andreas Tobler  <a.tobler@schweiz.ch>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkWindowPeer_gtkWindowSetResizable):
	Replace deprecated gtk_window_set_policy with gtk_window_set_resizable.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkMenuPeer_delItem): Replace deprecated
	gtk_container_children with gtk_container_get_children.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkMenuBarPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkMenuBarPeer_nativeSetHelpMenu): Likewise.
	(Java_gnu_java_awt_peer_gtk_GtkMenuBarPeer_delMenu): Likewise.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkImage.c
	(Java_gnu_java_awt_peer_gtk_GtkImage_freePixmap): Replace deprecated
	gdk_pixmap_unref with g_object_unref.

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkComponentPeer.c
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWidgetSetCursorUnlocked):
	Replace deprecated gdk_cursor_destroy with gdk_cursor_unref.
	(Java_gnu_java_awt_peer_gtk_GtkComponentPeer_gtkWidgetSetParent):
	Replace deprecated gtk_container_children with
	gtk_container_get_children.