@@ -1,3 +1,9 @@
+2005-09-23  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/plaf/metal/MetalLookAndFeel.java
+	(setCurrentTheme): throw exception if argument is null, improved API
+	docs.
+	
 2005-09-22  Roman Kennke  <kennke@aicas.com>
 
 	* javax/swing/JPanel.java
